# advent-of-code

./: 1.hs  2  2.hs  2.rkt  5.rs  README.md
day1/: 1.hs
day10/: 10.hs
day11/: 11.hs
day12/: 12.hs
day13/: 13.hs
day3/: 3.rs
day6/: 6.rs
day7/: 7.hs
day8/: 8.rs
day9/: 9.hs
hs/: aoc2017.cabal  stack.yaml
hs/lib/: 11.hs  4.hs  9.hs  Day01.hs  Day07.hs  Day10.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Lib.hs
hs/src/: Main.hs
idr/: 13.idr
rs/: 5.rs  6.rs
