name:                aoc2017
version:             0.1.0.0
homepage:            https://github.com/rukokarasu/advent-of-code
author:              rrruko
maintainer:          rukokarasu@gmail.com
copyright:           2017 rrruko
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     Day10, Day14
  build-depends:       base >= 4.7 && < 5
                     , split
                     , vector
  default-language:    Haskell2010

executable aoc
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base
                     , aoc2017
  default-language:    Haskell2010
